@@ -61,7 +61,7 @@
 const StringId ScenarioCategoryStringIds[SCENARIO_CATEGORY_COUNT] = {
     STR_BEGINNER_PARKS, STR_CHALLENGING_PARKS,    STR_EXPERT_PARKS, STR_REAL_PARKS, STR_OTHER_PARKS,
 
-    STR_DLC_PARKS,      STR_BUILD_YOUR_OWN_PARKS,
+    STR_DLC_PARKS,      STR_BUILD_YOUR_OWN_PARKS, STR_COMPETITIONS,
 };
 
 SCENARIO_CATEGORY gScenarioCategory;
