@@ -53,6 +53,7 @@ enum SCENARIO_CATEGORY
     // OpenRCT2 categories
     SCENARIO_CATEGORY_DLC,
     SCENARIO_CATEGORY_BUILD_YOUR_OWN,
+    SCENARIO_CATEGORY_COMPETITIONS,
 
     SCENARIO_CATEGORY_COUNT
 };
